--- a/sass/_botkit.scss
+++ b/sass/_botkit.scss
@@ -25,6 +25,9 @@ html {
     position: relative;
     max-width: 1000px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .box {
