--- a/sass/_chat.scss
+++ b/sass/_chat.scss
@@ -7,12 +7,11 @@ $human_message_text: white;
 
 #message_window {
     background: $background;
-    border-left: 1px solid #CCC;
-    border-right: 1px solid #CCC;
+    border: 1px solid #CCC;
 
     /*height: 500px;
     width: 320px;*/
-    height: 100%;
+    height: 90vh;
     width: 100%;
     /*margin: 2rem auto;*/
     display: flex;
